--- a/03-functions.qmd
+++ b/03-functions.qmd
@@ -206,9 +206,67 @@ Explain in your own words what the freq argument in the `hist()` function does. 
 
 <br>
 
+::: {.callout-tip collapse="true"}
+## Histogram Frequency Parameter
+```{r}
+#| echo: true
+#| eval: true
+
+# Create our data vector
+data <- c(1,2,4,3,5,6,7,8,6,5,5,5,3,4,5,7)
+
+# Default behavior (freq = TRUE) - shows counts on y-axis
+hist(data, main = "Frequency Histogram (freq = TRUE)", xlab = "Values")
+
+# Setting freq = FALSE - shows probability density on y-axis
+hist(data, freq = FALSE, main = "Density Histogram (freq = FALSE)", xlab = "Values")
+```
+
+The `freq` argument in the `hist()` function determines what is shown on the y-axis:
+- When `freq = TRUE` (default), the y-axis shows the frequency counts (number of observations in each bin)
+- When `freq = FALSE`, the y-axis shows probability densities (area under the histogram equals 1)
+
+This is useful when comparing distributions of different sample sizes or when working with probability distributions.
+:::
+
+<br>
+
 ### 5.2
 
 Tailor your code from the `hist()` example in problem 1 so that your histogram has a main title, axis labels, and set the `col` argument to "blue". We are just scratching the surface with plot customization - try to incorporate other arguments to make an attractive graph.
+
+<br>
+
+::: {.callout-tip collapse="true"}
+## Customized Histogram
+```{r}
+#| echo: true
+#| eval: true
+
+# Create our data vector
+data <- c(1,2,4,3,5,6,7,8,6,5,5,5,3,4,5,7)
+
+# Customized histogram with main title, axis labels, and blue color
+hist(data, 
+     main = "Distribution of Values",
+     xlab = "Values", 
+     ylab = "Frequency",
+     col = "blue",
+     border = "white",
+     breaks = 8,
+     xlim = c(0, 9),
+     las = 1)  # Makes y-axis labels horizontal
+```
+
+This customized histogram includes:
+- A descriptive main title
+- Labeled x and y axes
+- Blue fill color for the bars
+- White borders for better contrast
+- Custom number of breaks (bins)
+- Extended x-axis limits for better visualization
+- Horizontal y-axis labels for easier reading
+:::
 
 <br>
 
@@ -224,9 +282,59 @@ You will see an error message. The symbol "NA" has a special meaning in R, indic
 
 <br>
 
+::: {.callout-tip collapse="true"}
+## Handling NA Values
+```{r}
+#| echo: true
+#| eval: true
+
+# Create data vector with NA value
+data_with_na <- c(1,2,4,3,5,6,7,8,6,5,NA,5,3,4,5,7)
+
+# Try to calculate mean without handling NA
+# This will produce NA as the result
+mean(data_with_na)
+
+# Use na.rm = TRUE to remove NA values before calculating the mean
+mean(data_with_na, na.rm = TRUE)
+```
+
+When calculating the mean of data containing NA values:
+- Without specifying `na.rm = TRUE`, the result will be NA because R doesn't know how to handle missing values by default
+- With `na.rm = TRUE`, R removes all NA values before calculating the mean
+- The help page (`help(mean)`) explains that `na.rm` is a logical value indicating whether NA values should be stripped before computation
+:::
+
+<br>
+
 ### 5.4
 
 In your own words, what value is required for the "d" argument in the `pwr.t.test()` function in the `{pwr}` package? Show the code involved including any appropriate comment code required to answer this question. (hint: you will probably need to install the package, load it, and use `help()` on the function name)
+
+<br>
+
+::: {.callout-tip collapse="true"}
+## Power Test d Parameter
+```{r}
+#| echo: true
+#| eval: false
+
+# Install the pwr package if not already installed
+# install.packages("pwr")
+
+# Load the pwr package
+library(pwr)
+
+# Get help on the pwr.t.test function
+help(pwr.t.test)
+```
+
+The "d" argument in the `pwr.t.test()` function requires the effect size, which is the standardized difference between means (Cohen's d). 
+
+According to the help documentation, this is the difference between the two means divided by the standard deviation. It represents how large the effect is expected to be in standardized units, which is essential for power calculations.
+
+For example, d = 0.5 would represent a medium effect size according to Cohen's conventions.
+:::
 
 <br>
 
@@ -238,9 +346,67 @@ Follow the instructions to list all of the built-in colours in `R` and list them
 
 <br>
 
+::: {.callout-tip collapse="true"}
+## R Color Names
+```{r}
+#| echo: true
+#| eval: true
+
+# List all built-in colors in R
+colors <- colors()
+
+# Find the index of "goldenrod"
+which(colors == "goldenrod")
+
+# Find the index of "tomato2"
+which(colors == "tomato2")
+
+# Display a sample of colors around tomato2
+colors[600:610]
+```
+
+The index number for "tomato2" is 605 in the built-in R colors list.
+
+The instructions from the ggplot2 vignette explain that R has many built-in color names that can be listed using the `colors()` function. These named colors can be used directly in plotting functions, including ggplot2's color and fill aesthetics.
+:::
+
+<br>
+
 ### 5.6
 
 Write a plausible practice question involving the use of `help()` for an R function.
+
+<br>
+
+::: {.callout-tip collapse="true"}
+## Help Function Question
+```{r}
+#| echo: true
+#| eval: false
+
+# A plausible practice question could be:
+
+# "Use the help() function to explore the t.test() function. What does the 'paired' 
+# argument do, and when would you set it to TRUE? Give an example of when you would 
+# use a paired t-test in a research context."
+
+# Solution:
+help(t.test)
+
+# The 'paired' argument is a logical value indicating whether to perform a paired t-test.
+# When paired = TRUE, the test becomes a paired t-test, which is used when observations
+# are paired or matched in some way (e.g., before-after measurements on the same subjects).
+
+# Example research context:
+# You would use a paired t-test when measuring the same variable on the same subjects
+# under two different conditions, such as:
+# - Blood pressure before and after taking medication
+# - Test scores before and after an educational intervention
+# - Plant growth with and without fertilizer (when plants are matched/paired)
+```
+
+This question tests understanding of how to use the help system to learn about function arguments and their practical applications in statistical analysis.
+:::
 
 <br>
 
